# pygeoapi_k8s-manager

./: .dockerignore  .ruff.toml  Dockerfile  NOTICE  README.md  pygeoapi-config.yaml  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt
.github/workflows/: build-pipeline.yaml  flake8.yaml  push-lint-format-and-test.yaml  push-linting.yaml  stale.yml
k8s-kind/: README.md  configmap.yaml  deployment.yaml  kind-cluster.yaml  kustomization.yaml  manager.yaml  minio.yaml  permissions.yaml  service.yaml
k8s-manifests/: configmap.yaml  permissions.yaml
pygeoapi_kubernetes_manager/: finalizer.py  manager.py  util.py
pygeoapi_kubernetes_manager/process/: __init__.py  generic_image.py  hello_world_k8s.py
src/pygeoapi_k8s_manager/: __init__.py  finalizer.py  manager.py  util.py
src/pygeoapi_k8s_manager/process/: __init__.py  generic_image.py  hello_world_k8s.py
tests/: __init__.py  test_finalizer.py  test_manager.py  test_util.py
tests/process/: test_generic_image.py  test_hello_world_k8s.py
